Fix profile details buttons overlaping

--- a/UniTrackUI/src/app/shared/components/header/header.component.scss
+++ b/UniTrackUI/src/app/shared/components/header/header.component.scss
@@ -2,6 +2,7 @@
 
 .header-wrapper {
   height: 70px;
+  z-index: 100;
 }
 
 .title-wrapper {
